# xledger

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  MyListWidgetItem.cpp  README.md  addbilldialog.cpp  addtabwidget.cpp  addtabwidget.h  addtagdialog.cpp  addtagdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  vcpkg-configuration.json
assets/: style.qss
resources/: style.qss
src/: main.cpp
src/database/: databasemanager.cpp  databasemanager.h
src/interface/: iaddview.h  imainview.h
src/interface/model/: ibillmodel.h  icategorymodel.h  itagmodel.h
src/interface/view/: iaddview.h  imainview.h
src/model/: billmodel.cpp  billmodel.h  categorymodel.cpp  categorymodel.h  mysqlrelationaltablemodel.cpp  mysqlrelationaltablemodel.h  tagmodel.cpp  tagmodel.h
src/model/dtos/: billdto.h  categorydto.h  filterstate.h  tagdto.h
src/model/service/: fileexportservice.cpp  fileexportservice.h
src/presenter/: addbillpresenter.cpp  addbillpresenter.h  addcategorytagpresenter.cpp  addcategorytagpresenter.h  mainpresenter.cpp  mainpresenter.h
src/ui/: MyListWidgetItem.cpp  MyListWidgetItem.h  MySqlRelationalDelegate.cpp  MySqlRelationalDelegate.h  MySqlRelationalTableModel.cpp  MySqlRelationalTableModel.h  MyStyledItemDelegate.cpp  addbilldialog.cpp  addbilldialog.h  addbillview.ui  addcategorytagview.ui  addtabwidget.cpp  addtagdialog.h  mainview.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylistview.cpp  mylistview.h
src/view/: addbillview.cpp  addbillview.h  addcategorytagview.cpp  addcategorytagview.h  addtabwidget.cpp  addtabwidget.h  mainview.cpp  mainview.h  mainwindow.cpp  mainwindow.h  mylistwidgetitem.cpp  mysqlrelationaldelegate.cpp  mysqlrelationaldelegate.h  mysqlrelationaltablemodel.cpp  mystyledItemdelegate.cpp  mystyledItemdelegate.h
tests/: CMakeLists.txt  tst_addbillpresenter.cpp  tst_addcategorytagpresenter.cpp  tst_billmodel.cpp  tst_dsb.cpp
tests/mock/: mockaddbillview.h  mockaddcategorytagview.h  mockbillmodel.h  mockcategorymodel.h  mocktagmodel.h
